# Cassini

./: .coverage  .gitignore  README.md  data.json  object-meta.json  postBuild  pyproject.toml  readme.md  requirements.txt  start
.github/workflows/: buid-and-test.yml  build-and-test.yml  build-docs.yml  check-requires-bump.yml  check-version.yml  python-app.yml  python-publish.yml
binder/: Home.ipynb  Introduction.ipynb  cas_project.py  environment.yml  jupyter_jupyterlab_server_config.py  postBuild  project.py  start
binder/Reports/: NaturePaper.ipynb
binder/WorkPackages/: WP1.ipynb  WP2.ipynb
binder/WorkPackages/.wps/: WP1.json  WP2.json
binder/WorkPackages/WP1/: WP1.1.ipynb  WP1.1a.ipynb  WP1.2.ipynb
binder/k/: WP1.1a-Shared.ipynb
binder/templates/Experiment/: Experiment.tmplt-Copy1.ipynb
binder/templates/Home/: Home.tmplt.ipynb
cassini/: __init__.py  accessors.py  config.py  core.py  environment.py  ipygui.py  jlgui.py  magics.py  meta.py  sharing.py  testing_utils.py  utils.py
cassini/compat/: __init__.py  update.py
cassini/defaults/: __init__.py  tiers.py
cassini/ext/: __init__.py
cassini/migrate/: V0_1toV0_2.py  V0_2toV0_3.py  __init__.py  __main__.py  base.py
doc_src/: api.rst  build_api_docs.py  conf.py  contributing.rst  customising.rst  features.rst  index.rst  jlgui.rst  mkdocs.yml  notes.rst  quickstart.rst
doc_src/binder/: environment.yml  start
doc_src/docs/: 0.2.x to 0.3.x.md  customization.md  index.md  sharing.md
docs/: .buildinfo  api.html  customising.html  features.html  genindex.html  index.html  jlgui.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/.doctrees/: api.doctree  customising.doctree  environment.pickle  features.doctree  index.doctree  jlgui.doctree  quickstart.doctree
docs/_sources/: customising.rst.txt  features.rst.txt  index.rst.txt  jlgui.rst.txt  quickstart.rst.txt
docs/_static/: documentation_options.js
docs/source/: conf.py  customising.rst  features.rst  index.rst
examples/custom/: Book.ipynb  my_project.py  project.py
examples/default/: Home.ipynb  project.py  run_lab.bat
mkdocs-docs/: mkdocs.yml
tests/: TEST_FILE_DO_NO_INCLUDE  test_core.py  test_default_tiers.py  test_extensibility.py  test_highlights.py  test_jlgui.py  test_meta.py  test_sharing.py  test_utils.py  test_workflow.py  utils.py
tests/compat/: test_update.py  test_zero_two.py
tests/migrate/: test_cli.py  test_zero_two.py
tests/project_cases/: basic.py  not_project.py
tests/templates/: test.tmplt
(+115 files in other folders)
