[tool.poetry]
name = "cassini"
version = "0.1.3"
description = "A tool to structure experimental work, data and analysis using Jupyter Lab."
authors = ["0Hughman0 <rammers2@hotmail.co.uk>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
ipywidgets = "^7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0"
tomli = "^2.0.1"
sphinx-rtd-theme = "^1.2.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
