[tool.poetry]
name = "cassini"
version = "0.2.0"
description = "A tool to structure experimental work, data and analysis using Jupyter Lab."
authors = ["0Hughman0 <rammers2@hotmail.co.uk>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "^1.0"
ipywidgets = "^8.0"
jupyterlab = "^4.0.0"
typing-extensions = "^4.7.1"
jupyter_cassini_server = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.4"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
black = "^23.7.0"
mypy = "^1.4.1"
pandas-stubs = "^2.0.2.230605"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
tomli = "^2.0.1"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
